@@ -1,6 +1,5 @@
 package net.minestom.server.command;
 
-import net.minestom.server.MinecraftServer;
 import net.minestom.server.command.builder.arguments.*;
 import net.minestom.server.entity.Player;
 import net.minestom.server.network.packet.server.play.DeclareCommandsPacket;
@@ -16,20 +15,20 @@ final class GraphConverter {
         //no instance
     }
 
-    @Contract("_, _ -> new")
-    public static DeclareCommandsPacket createPacket(Graph graph, @Nullable Player player) {
+    @Contract("_, _, _ -> new")
+    public static DeclareCommandsPacket createPacket(CommandManager manager, Graph graph, @Nullable Player player) {
         List<DeclareCommandsPacket.Node> nodes = new ArrayList<>();
         List<BiConsumer<Graph, Integer>> redirects = new ArrayList<>();
         Map<Argument<?>, Integer> argToPacketId = new HashMap<>();
         final AtomicInteger idSource = new AtomicInteger(0);
-        final int rootId = append(graph.root(), nodes, redirects, idSource, null, player, argToPacketId)[0];
+        final int rootId = append(manager, graph.root(), nodes, redirects, idSource, null, player, argToPacketId)[0];
         for (var r : redirects) {
             r.accept(graph, rootId);
         }
         return new DeclareCommandsPacket(nodes, rootId);
     }
 
-    private static int[] append(Graph.Node graphNode, List<DeclareCommandsPacket.Node> to,
+    private static int[] append(CommandManager manager, Graph.Node graphNode, List<DeclareCommandsPacket.Node> to,
                                 List<BiConsumer<Graph, Integer>> redirects, AtomicInteger id, @Nullable AtomicInteger redirect,
                                 @Nullable Player player, Map<Argument<?>, Integer> argToPacketId) {
         final Graph.Execution execution = graphNode.execution();
@@ -43,7 +42,7 @@ final class GraphConverter {
         final DeclareCommandsPacket.Node node = new DeclareCommandsPacket.Node();
         int[] packetNodeChildren = new int[children.size()];
         for (int i = 0, appendIndex = 0; i < children.size(); i++) {
-            final int[] append = append(children.get(i), to, redirects, id, redirect, player, argToPacketId);
+            final int[] append = append(manager, children.get(i), to, redirects, id, redirect, player, argToPacketId);
             if (append.length > 0) {
                 argToPacketId.put(children.get(i).argument(), append[0]);
             }
@@ -56,11 +55,14 @@ final class GraphConverter {
             }
         }
         node.children = packetNodeChildren;
+
+        boolean isExecutable = graphNode.execution() != null && graphNode.execution().executor() != null;
+
         if (argument instanceof ArgumentLiteral literal) {
             if (literal.getId().isEmpty()) {
                 node.flags = 0; //root
             } else {
-                node.flags = literal(false, false);
+                node.flags = literal(isExecutable, false);
                 node.name = argument.getId();
                 if (redirect != null) {
                     node.flags |= 0x8;
@@ -71,18 +73,18 @@ final class GraphConverter {
             return new int[]{id.getAndIncrement()};
         } else {
             if (argument instanceof ArgumentCommand argCmd) {
-                node.flags = literal(false, true);
+                node.flags = literal(isExecutable, true);
                 node.name = argument.getId();
                 final String shortcut = argCmd.getShortcut();
                 if (shortcut.isEmpty()) {
                     redirects.add((graph, root) -> node.redirectedNode = root);
                 } else {
                     redirects.add((graph, root) -> {
-                        var sender = player == null ? MinecraftServer.getCommandManager().getConsoleSender() : player;
+                        var sender = player == null ? manager.getConsoleSender() : player;
                         final List<Argument<?>> args = CommandParser.parser().parse(sender, graph, shortcut).args();
-                        final Argument<?> last = args.get(args.size() - 1);
+                        final Argument<?> last = args.getLast();
                         if (last.allowSpace()) {
-                            node.redirectedNode = argToPacketId.get(args.get(args.size()-2));
+                            node.redirectedNode = argToPacketId.get(args.get(args.size() - 2));
                         } else {
                             node.redirectedNode = argToPacketId.get(last);
                         }
@@ -100,7 +102,7 @@ final class GraphConverter {
                     String entry = entries.get(i);
                     final DeclareCommandsPacket.Node subNode = new DeclareCommandsPacket.Node();
                     subNode.children = node.children;
-                    subNode.flags = literal(false, false);
+                    subNode.flags = literal(isExecutable, false);
                     subNode.name = entry;
                     if (redirect != null) {
                         subNode.flags |= 0x8;
@@ -118,7 +120,7 @@ final class GraphConverter {
                     Argument<?> entry = entries.get(i);
                     if (i == entries.size() - 1) {
                         // Last will be the parent of next args
-                        final int[] l = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
+                        final int[] l = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
                                 id, redirect, player, argToPacketId);
                         for (int n : l) {
                             to.get(n).children = node.children;
@@ -129,11 +131,11 @@ final class GraphConverter {
                         return res == null ? l : res;
                     } else if (i == 0) {
                         // First will be the children & parent of following
-                        res = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects, id,
+                        res = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects, id,
                                 null, player, argToPacketId);
                         last = res;
                     } else {
-                        final int[] l = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
+                        final int[] l = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
                                 id, null, player, argToPacketId);
                         for (int n : last) {
                             to.get(n).children = l;
@@ -148,7 +150,7 @@ final class GraphConverter {
                 List<?> arguments = special.arguments();
                 for (int i = 0, appendIndex = 0; i < arguments.size(); i++) {
                     Object arg = arguments.get(i);
-                    final int[] append = append(new GraphImpl.NodeImpl((Argument<?>) arg, null, List.of()), to,
+                    final int[] append = append(manager, new GraphImpl.NodeImpl((Argument<?>) arg, null, List.of()), to,
                             redirects, id, r, player, argToPacketId);
                     if (append.length == 1) {
                         res[appendIndex++] = append[0];
@@ -162,7 +164,7 @@ final class GraphConverter {
                 return res;
             } else {
                 final boolean hasSuggestion = argument.hasSuggestion();
-                node.flags = arg(false, hasSuggestion);
+                node.flags = arg(isExecutable, hasSuggestion);
                 node.name = argument.getId();
                 node.parser = argument.parser();
                 node.properties = argument.nodeProperties();
